--- a/ApiGateway/Properties/launchSettings.json
+++ b/ApiGateway/Properties/launchSettings.json
@@ -4,19 +4,19 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:51345",
+      "applicationUrl": "http://localhost:10066",
       "sslPort": 0
     }
   },
   "profiles": {
-    "Api": {
+    "ApiGateway": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5234",
+      "applicationUrl": "http://localhost:5042",
       "dotnetRunMessages": true
     },
     "IIS Express": {
