--- a/WorkFlow/appsettings.json
+++ b/WorkFlow/appsettings.json
@@ -5,5 +5,41 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Error",
+        "System": "Error"
+      }
+    }
+  },
+  "ElasticsearchOptions": {
+    "Uri": "http://10.162.81.91:9200",
+    "User": "elastic",
+    "Password": "Abcd123$"
+  },
+  "DatabaseOptions": {
+    "Provider": "Oracle",
+    "ConnectionStrings": {
+      "Oracle": "DATA SOURCE=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=10.162.81.81)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=EDOCTC)));USER ID=ED_WFS_DEV; Password=abc123",
+      "PostgreSQL": "Server=10.10.1.80;Port=5432;Database=CMC.TS.WFS;User ID =postgres;Password=Abcd123$;Integrated Security=true;Pooling=true;",
+      "MySql": "server=10.10.1.80;database=CMC.TS.WFS;User Id=mysql;password=Abcd123$;Persist Security Info=True;"
+    },
+    "RabbitOptions": {
+      "Host": "10.162.81.91:5672",
+      //"Host": "10.10.1.81:5672",
+      "VirtualHost": "/",
+      "User": "admin",
+      "Password": "Abcd123$"
+    },
+    "JwtTokenConfig": {
+      "Secret": "1234567890123456789",
+      "Issuer": "http://cmc.ts.edoc.ums",
+      "Audience": "http://cmc.ts.edoc.ums",
+      "AccessTokenExpiration": 20,
+      "RefreshTokenExpiration": 60
+    }
+  },
 }
