--- a/WorkFlow/appsettings.json
+++ b/WorkFlow/appsettings.json
@@ -7,13 +7,21 @@
   },
   "AllowedHosts": "*",
   "Serilog": {
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Error",
-        "System": "Error"
+    "MinimumLevel": "Information",
+    "Override": {
+      "Microsoft.AspNetCore": "Warning"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "DAINT\\AppLogs.log"
+        }
       }
-    }
+    ]
   },
   "ElasticsearchOptions": {
     "Uri": "http://10.162.81.91:9200",
