--- a/WorkFlow/appsettings.json
+++ b/WorkFlow/appsettings.json
@@ -20,6 +20,13 @@
         "Args": {
           "path": "DAINT\\AppLogs.log"
         }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "DAINT\\AppJSONLogs.log",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
       }
     ]
   },
