--- a/WorkFlow/appsettings.json
+++ b/WorkFlow/appsettings.json
@@ -1,16 +1,8 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
   "Serilog": {
-    "MinimumLevel": "Information",
-    "Override": {
-      "Microsoft.AspNetCore": "Warning"
-    },
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Debug",
     "WriteTo": [
       {
         "Name": "Console"
