--- a/WorkFlow/appsettings.json
+++ b/WorkFlow/appsettings.json
@@ -10,7 +10,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "DAINT\\AppLogs.log"
+          "path": "DAINT.txt"
         }
       }
     ]
