--- a/WorkFlow/appsettings.json
+++ b/WorkFlow/appsettings.json
@@ -2,7 +2,7 @@
   "AllowedHosts": "*",
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
-    "MinimumLevel": "Debug",
+    "MinimumLevel": "Warning",
     "WriteTo": [
       {
         "Name": "Console"
@@ -10,7 +10,8 @@
       {
         "Name": "File",
         "Args": {
-          "path": "DAINT.txt"
+          "path": "DAINT.txt",
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
         }
       }
     ]
