--- a/WorkFlow/appsettings.json
+++ b/WorkFlow/appsettings.json
@@ -11,7 +11,9 @@
         "Name": "File",
         "Args": {
           "path": "DAINT.txt",
-          "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level}] {Message} {NewLine} {Exception}",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 1
         }
       }
     ]
