--- a/WorkFlow/appsettings.json
+++ b/WorkFlow/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "Serilog": {
-    "MinimumLevel": "Warning",
+    "MinimumLevel": "Information",
     "WriteTo": [
       {
         "Name": "Console"
