--- a/WorkFlow/appsettings.json
+++ b/WorkFlow/appsettings.json
@@ -11,8 +11,7 @@
         "Args": {
           "path": "DAINT.txt",
           "outputTemplate": "{Timestamp:HH:mm:ss.fff} [{Level}] {Message} {NewLine} {Exception}",
-          "rollingInterval": "Day",
-          "retainedFileCountLimit": 1
+          "rollingInterval": "Hour"
         }
       }
     ]
