--- a/WorkFlow/appsettings.json
+++ b/WorkFlow/appsettings.json
@@ -9,9 +9,10 @@
       {
         "Name": "File",
         "Args": {
-          "path": "DAINT.txt",
+          "path": "/Workflow/Logs/Error/Log.txt",
           "outputTemplate": "{Timestamp:HH:mm:ss.fff} [{Level}] {Message} {NewLine} {Exception}",
-          "rollingInterval": "Day"
+          "rollingInterval": "Day",
+          "restrictedToMinimumLevel": "Error"
         }
       }
     ]
