--- a/WorkFlow/appsettings.json
+++ b/WorkFlow/appsettings.json
@@ -9,7 +9,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "/Logs/Workflow/Error/Log.txt",
+          "path": "Logs/Workflow/Error/Log.txt",
           "outputTemplate": "{Timestamp:HH:mm:ss.fff} [{Level}] {Message} {NewLine} {Exception}",
           "rollingInterval": "Day",
           "restrictedToMinimumLevel": "Error"
