--- a/WorkFlow/appsettings.json
+++ b/WorkFlow/appsettings.json
@@ -25,7 +25,7 @@
   "DatabaseOptions": {
     "Provider": "Oracle",
     "ConnectionStrings": {
-      "Oracle": "DATA SOURCE=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=10.162.113.140)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=PDB1)));USER ID=ED_TEST; Password=Davidkmhd!1;",
+      "Oracle": "DATA SOURCE=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=10.162.113.140)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=PDB1)));USER ID=ED_CAL_HQ; Password=abc123;",
       "PostgreSQL": "Server=10.10.1.80;Port=5432;Database=CMC.TS.WFS;User ID =postgres;Password=Abcd123$;Integrated Security=true;Pooling=true;",
       "MySql": "server=10.10.1.80;database=CMC.TS.WFS;User Id=mysql;password=Abcd123$;Persist Security Info=True;"
     }
