--- a/WorkerService/appsettings.json
+++ b/WorkerService/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AccountOptions": {
+    "device_info": "{\"os.name\":\"Windows\",\"os.version\":10,\"browser.name\":\"Chrome\",\"browser.version\":100.0489675,\"navigator.userAgent\":\"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/100.0.4896.75 Safari/537.36\",\"navigator.appVersion\":\"5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/100.0.4896.75 Safari/537.36\",\"navigator.platform\":\"Win32\",\"navigator.vendor\":\"Google Inc.\"}",
+    "password": "Davidkmhd!1",
+    "username": "ngothanhdai74@gmail.com"
   }
 }
