--- a/Catalog/Catalog.csproj
+++ b/Catalog/Catalog.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Category\" />
+    <Folder Include="Models\MyCatalog\" />
+    <Folder Include="Models\Stock\" />
+  </ItemGroup>
+
 </Project>
