--- a/BizApi/appsettings.json
+++ b/BizApi/appsettings.json
@@ -1,9 +1,12 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "StockDefender": "May mặc, Internet, Hạ tầng công nghệ, Ăn uống, Dược phẩm, Năng lượng",
+  "StockMidfielder": "Bất động sản, Ngân hàng",
+  "StockStriker": "Ngành Đặc biệt, Bitcoin"
 }
