--- a/BizApi/appsettings.json
+++ b/BizApi/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "StockDefender": "May mặc, Internet, Hạ tầng công nghệ, Ăn uống, Dược phẩm, Năng lượng",
-  "StockMidfielder": "Bất động sản, Ngân hàng",
-  "StockStriker": "Ngành Đặc biệt, Bitcoin"
+  "Stock": {
+    "StockGoalKeeper": "Tiết kiệm ngân hàng, Chứng chỉ quỹ, Trái phiếu",
+    "StockDefender": "Giáo dục, May mặc, Internet, Hạ tầng công nghệ, Ăn uống, Dược phẩm, Năng lượng",
+    "StockMidfielder": "Bất động sản, Ngân hàng",
+    "StockStriker": "Ngành Đặc biệt, Tiền ảo"
+  }
 }
