--- a/BizApi/appsettings.json
+++ b/BizApi/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "Stock": {
     "StockGoalKeeper": "Tiết kiệm ngân hàng, Chứng chỉ quỹ, Trái phiếu",
-    "StockDefender": "Giáo dục, May mặc, Internet, Hạ tầng công nghệ, Ăn uống, Dược phẩm, Năng lượng",
-    "StockMidfielder": "Bất động sản, Ngân hàng",
-    "StockStriker": "Ngành Đặc biệt, Tiền ảo"
+    "StockDefender": "Giáo dục, Hạ tầng công nghệ, Ăn uống, Dược phẩm, Năng lượng, Nhiên liệu - Vật liệu",
+    "StockMidfielder": "Ngân hàng",
+    "StockStriker": "Ngành Đặc biệt: Tiền ảo"
   }
 }
