--- a/LifeStyle/Properties/launchSettings.json
+++ b/LifeStyle/Properties/launchSettings.json
@@ -4,19 +4,19 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:41459",
+      "applicationUrl": "http://localhost:27823",
       "sslPort": 0
     }
   },
   "profiles": {
-    "FinanceService": {
+    "LifeStyle": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5188",
+      "applicationUrl": "http://localhost:5124",
       "dotnetRunMessages": true
     },
     "IIS Express": {
