--- a/Finance/appsettings.json
+++ b/Finance/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "LocationRoot": "D:\\LocationRoot\\Finance"
 }
