--- a/Finance/Finance.csproj
+++ b/Finance/Finance.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Utils\**" />
+    <Content Remove="Utils\**" />
+    <EmbeddedResource Remove="Utils\**" />
+    <None Remove="Utils\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
@@ -15,7 +22,6 @@
   <ItemGroup>
     <Folder Include="Repositories\Caching\" />
     <Folder Include="Repositories\Sql\" />
-    <Folder Include="Utils\" />
   </ItemGroup>
 
 </Project>
