--- a/Finance/Finance.csproj
+++ b/Finance/Finance.csproj
@@ -8,20 +8,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Repositories\Caching\**" />
+    <Compile Remove="Repositories\Sql\**" />
     <Compile Remove="Utils\**" />
+    <Content Remove="Repositories\Caching\**" />
+    <Content Remove="Repositories\Sql\**" />
     <Content Remove="Utils\**" />
+    <EmbeddedResource Remove="Repositories\Caching\**" />
+    <EmbeddedResource Remove="Repositories\Sql\**" />
     <EmbeddedResource Remove="Utils\**" />
+    <None Remove="Repositories\Caching\**" />
+    <None Remove="Repositories\Sql\**" />
     <None Remove="Utils\**" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Repositories\Caching\" />
-    <Folder Include="Repositories\Sql\" />
   </ItemGroup>
 
 </Project>
